--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
       background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(0, 0%, 0%, 0.791));
       display: flex;
       justify-content: center;
-      height: 700px;
+      height: 100vh;
       align-items: center;
       flex-direction: column;
     }
