--- a/Mobile.html
+++ b/Mobile.html
@@ -548,8 +548,14 @@
         </footer>
     </div>
 
-    <!-- Javascript linking -->
-    <script src="/index.js"></script>
+     <!-- Javascript Code -->
+    <script>
+        let login = document.getElementById('login');
+        let user = document.getElementById('user')
+        user.addEventListener('click', () => {
+            login.classList.toggle('link')
+        })
+    </script>
 </body>
 
 </html>
