--- a/Accessories.html
+++ b/Accessories.html
@@ -315,7 +315,7 @@
 </head>
 
 <body>
-    <div class="background" id="top">
+    <div class="background" id="Top">
         <nav class="navbar navbar-expand-md sticky-top">
             <div class="container-xxl">
                 <a href="index.html"  class="nav-brand nav-logo">
@@ -393,7 +393,7 @@
                                         <div class="img-container">
                                             <a href="/each-products/PS4.html"> <img src="image/pad.jpg"
                                                     class="img-item" alt="PS4 DualShock 4 Wireless Controller"></a>
-                                            <h2 class="text-light">PS4 DualShock 4 Wireless Controller</h2>
+                                            <h2 class="text-light">PS4 DualShock Controller</h2>
                                             <span><span>-$114</span></span>
                                         </div>
                                     </div>
@@ -401,7 +401,7 @@
                                         <div class="img-container">
                                             <a href="/each-products/headphone.html"> <img src="image/headphone.jpg"
                                                     class="img-item" alt="wireless Bluetooth over-ear headphones"></a>
-                                            <h2 class="text-light">wireless Bluetooth over-ear headphones</h2>
+                                            <h2 class="text-light">wireless Bluetooth headphones</h2>
                                             <span><span>$130</span></span>
                                         </div>
                                     </div>
@@ -434,14 +434,14 @@
                                             <a href="/each-products/Amazon Echo Dot.html"> <img src="image/jambx.jpg"
                                                     class="img-item" alt="Amazon Echo Dot"></a>
                                             <h2 class="text-light">Amazon Echo Dot</h2>
-                                            <span><span$108</span></span>
+                                            <span>$108</span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
                                             <a href="/each-products/mouse2.html"> <img src="image/black mouse.jpg"
                                                     class="img-item" alt="USB Wired Computer Mouse Mice"></a>
-                                            <h2 class="text-light">USB Wired Computer Mouse Mice</h2>
+                                            <h2 class="text-light">USB Computer Mouse</h2>
                                             <span><span>$13</span></span>
                                         </div>
                                     </div>
@@ -474,7 +474,7 @@
                                             <a href="/each-products/batterybank3.html"> <img
                                                     src="image/vrurc 10000mAh bank.jpg" class="img-item" alt=""></a>
                                             <h2 class="text-light">Veger VG-W1116 Power Bank</h2>
-                                                <span>₦30,000</span>
+                                                <span>$70,000</span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
@@ -482,7 +482,7 @@
                                             <a href="/each-products/bluetooth2.html"> <img src="images/bluetooth.jpg"
                                                     class="img-item" alt=""></a>
                                             <h2 class="text-light">Portable Bluetooth Speaker</h2>
-                                            <span>₦72,000</span>
+                                            <span>$52,000</span>
                                         </div>
                                     </div>
                                 </div>
