--- a/each-products/batterybank3.html
+++ b/each-products/batterybank3.html
@@ -86,7 +86,7 @@
                             Safety Features: Typically includes overcharge protection, short circuit protection, temperature control <br>
                             LED Indicators: Battery level indicator lights <br>
                         <!-- PRICE -->
-                        <span class="price">₦30,000</span>
+                        <span class="price">$70,000</span>
                         <p style="font-size:16px;">shipping fee $12</p>
 
                         <!-- CART BUTTONS -->
