--- a/each-products/bluetooth2.html
+++ b/each-products/bluetooth2.html
@@ -81,7 +81,7 @@
                             Additional Inputs: May include AUX port, TF/microSD card slot <br>
                             Water Resistance: May have IPX rating for water/dust resistance <br>
                         <!-- PRICE -->
-                        <span class="price">₦72,000</span>
+                        <span class="price">$52,000</span>
                         <p style="font-size:16px;">shipping fee $10</p>
 
                         <!-- CART BUTTONS -->
