--- a/each-products/desktop-monitor.html
+++ b/each-products/desktop-monitor.html
@@ -22,7 +22,7 @@
     <div class="background">
         <nav class="navbar navbar-expand-md">
             <div class="container-xxl">
-                <a href="/home.html" id="top" class="nav-brand nav-logo">
+                <a href="/index.html" id="top" class="nav-brand nav-logo">
                     <span class="text-light"><span style="color:orange;">Amy</span>Accessory</span>
                 </a>
                 <button class="navbar-toggler menu-icon" data-bs-toggle="collapse" data-bs-target="#main-nav"
