--- a/shop.html
+++ b/shop.html
@@ -10,7 +10,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/693dd61249.js" crossorigin="anonymous"></script>
-    <link
+    <linkA
         href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Monomakh&family=Roboto+Slab:wght@100..900&display=swap"
         rel="stylesheet">
     <title>Shop with Us</title>
@@ -434,51 +434,34 @@
                     </div>
                 </div>
                 <!-- the icon -->
-                <!-- <button class="carousel-control-prev" type="button" data-bs-target="#cal" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#cal" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon"></span>
                 </button>
                 <button class="carousel-control-next" type="button" data-bs-target="#cal" data-bs-slide="next">
                     <span class="carousel-control-next-icon"></span>
-                </button> -->
+                </button>
             </div>
             <main>
                 <section class="mt-4">
                     <div class="container-fliud">
                         <div class="mx-4 content-container">
-                            <!-- <span class="fs-4 text-light">Produts with set</span>
-                            <div class="row">
-                                <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                    <a href="/each-products/set1.html"> <img src="image/product-with-set (2).jpg"
-                                            class="img-item" alt=""></a>
-                                    <div>
-                                        <h2 class="text-light">ipone</h2>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                    <a href="/each-products/set2.html"> <img src="image/set-watch .jpg" class="img-item"
-                                            alt=""></a>
-                                </div>
-                                <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                    <a href="/each-products/set3.html"> <img src="images/pink iset.jpg" class="img-item"
-                                            alt=""></a>
-                                </div>
-                            </div> -->
                             <hr class="text-light line mt-5">
                             <div class="row">
                                 <span class="fs-4 text-light left">Mobile Phone Products</span>
                                 <span class="right"><a href="Mobile.html"><button class="btn shop-more">[Discover
                                             More]</button></a></span>
                                 <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                    <a href="/each-products/redmi.html"><img src="image/redmi.jpg" class="img-item"
-                                            alt=""></a>
+                                    <a href="/each-products/Oppo Find N3 Flip.html"> <img
+                                        src="image/PHONE- (5).jpg" class="img-item"
+                                        alt="Oppo Find N3 Flip"></a>
                                 </div>
                                 <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                    <a href="/each-products/oppo.html"> <img src="image/oppo.jpg" class="img-item"
-                                            alt=""></a>
+                                    <a href="/each-products/iPhone 12 pro.html"> <img src="image/PHONE- (7).jpg"
+                                        class="img-item" alt="iPhone 12 pro"></a>
                                 </div>
                                 <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                    <a href="/each-products/oppox7.html"> <img src="image/oppo x7.jpg" class="img-item"
-                                            alt=""></a>
+                                    <a href="/each-products/OPPO F25 Pro.html"> <img src="image/oppo.jpg"
+                                        class="img-item" alt="OPPO F25 Pro"></a>
                                 </div>
                             </div>
                             <hr class="text-light line mt-5">
