--- a/each-products/Apple AirPods.html
+++ b/each-products/Apple AirPods.html
@@ -17,7 +17,7 @@
     <div class="background">
         <nav class="navbar navbar-expand-md">
             <div class="container-xxl">
-                <a href="/home.html" id="top" class="nav-brand nav-logo">
+                <a href="/index.html" id="top" class="nav-brand nav-logo">
                     <span class="text-light"><span style="color:orange;">Amy</span>Accessory</span>
                 </a>
 
