--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Monomakh&family=Roboto+Slab:wght@100..900&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/693dd61249.js" crossorigin="anonymous"></script>
+    <script src="/jquer.min.js"></script>
     <style>
         body {
             font-family: "Monomakh", serif;
@@ -616,8 +617,6 @@
                                 <li class="footer-list"><a href="Computers.html" class="footer-link">Computers</a></li>
                                 <li class="footer-list"><a href="Accessories.html" class="footer-link">Accessories</a>
                                 </li>
-                                <li class="footer-list"><a href="Appliances.html" class="footer-link">Appliances</a>
-                                </li>
                                 <li class="footer-list"><a href="contact.html" class="footer-link">Contact</a></li>
                             </ul>
                         </div>
@@ -652,6 +651,10 @@
         let user = document.getElementById('user')
         user.addEventListener('click', () => {
             login.classList.toggle('link')
+        })
+
+        $('document').ready(function () {
+            alert('welcome To AmyAccesory')
         })
     </script>
 </body>
