--- a/shop.html
+++ b/shop.html
@@ -15,6 +15,7 @@
         rel="stylesheet">
     <title>Shop with Us</title>
     <style>
+        /* css style */
         body {
             font-family: "Monomakh", serif;
             font-weight: 400;
@@ -418,30 +419,31 @@
                     <button type="button" data-bs-target="#cal" data-bs-slide-to="2"></button>
                     <button type="button" data-bs-target="#cal" data-bs-slide-to="3"></button>
                 </div>
-                <!-- the slide -->
+                <!-- the shop slide -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/image/set-watch .jpg" class="d-block w-100 img-slide" alt="">
+                        <img src="image/set-watch .jpg" class="d-block w-100 img-slide" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="/images/apple-tablet.jpg" class="d-block  w-100 img-slide" alt="">
+                        <img src="images/apple-tablet.jpg" class="d-block  w-100 img-slide" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="/images/pink iset.jpg" class="d-block  w-100 img-slide" alt="">
+                        <img src="images/pink iset.jpg" class="d-block  w-100 img-slide" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="/image/product-with-set (2).jpg" class="d-block w-100 img-slide" alt="">
+                        <img src="image/product-with-set (2).jpg" class="d-block w-100 img-slide" alt="">
                     </div>
                 </div>
-                <!-- the icon -->
-                <button class="carousel-control-prev" type="button" data-bs-target="#cal" data-bs-slide="prev">
+                <!-- the slide icon -->
+                <!-- <button class="carousel-control-prev" type="button" data-bs-target="#cal" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon"></span>
                 </button>
                 <button class="carousel-control-next" type="button" data-bs-target="#cal" data-bs-slide="next">
                     <span class="carousel-control-next-icon"></span>
-                </button>
+                </button> -->
             </div>
             <main>
+                <!-- products display code -->
                 <section class="mt-4">
                     <div class="container-fliud">
                         <div class="mx-4 content-container">
@@ -515,6 +517,7 @@
         <div class="container-fliud footer-img">
             <div class="container-fliud mx-4">
                 <div class="row">
+                    <!-- Footer Note -->
                     <div class="col-12 col-lg-5 col-md-5 footer-container">
                         <h3 class=" text-capitalize  footer-header">Amy Electronics Accessories</h3>
                         <p class="footer-paraghap-list footer-list2">Welcome to Amy Accessories, your trusted
@@ -522,6 +525,7 @@
                             6-months guarantee, ensuring you can shop with confidence. Our mission is to make the latest
                             electronic devices easily accessible to everyone</p>
                     </div>
+                    <!-- Footer nav linking -->
                     <div class="col-12 col-lg-2 col-md-2 fs-md-5 footer-container">
                         <h3 class=" text-capitalize  footer-header">Menu</h3>
                         <ul>
@@ -534,6 +538,7 @@
                             <li class="footer-list"><a href="contact.html" class="footer-link">Contact</a></li>
                         </ul>
                     </div>
+                    <!-- footer Info -->
                     <div class="col-12 col-lg-5 col-md-5 footer-container">
                         <h3 class=" text-capitalize  footer-header">INFO</h3>
                         <ul>
@@ -547,10 +552,11 @@
                     </div>
                 </div>
             </div>
+            <!-- copy right -->
             <div class="container copy-right-box">
                 <div class="row">
                     <div class="col">
-                        <div class="col-3 "><span class="copy-right">&copy; 2025 by AmyAccessory</span></div>
+                        <div class="col-3 ms-sm-5 "><span class="copy-right">&copy; 2025 by AmyAccessory</span></div>
                     </div>
                     <!-- <div class="col-12 col-lg-3 col-md-3">
                     <h3 class="mt-4 text-capitalize">Socail media</h3>
